--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -20,6 +20,8 @@
     <a href="https://www.alxafrica.com" target="_blank">
         <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo">
     </a>
+    <p>To see my tweets click the link below</p>
+    <a href="tweets.html">See my tweets</a>
 
 </body>
 </html>
