--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -23,5 +23,39 @@
     <p>To see my tweets click the link below</p>
     <a href="tweets.html">See my tweets</a>
 
+    <article>
+        <table border="1">
+           <thead>
+            <tr>
+                <th>Name</th>
+                <th>Age</th>
+                <th>Country</th>
+            </tr>
+           </thead>
+           <tbody>
+            <tr>
+                <td>John</td>
+                <td>25</td>
+                <td>USA</td>
+            </tr>
+            <tr>
+                <td>Emily</td>
+                <td>28</td>
+                <td>Canada</td>
+            </tr>
+            <tr>
+                <td>Micheal</td>
+                <td>32</td>
+                <td>Australia</td>
+            </tr>
+            <tr>
+                <td>Sophia</td>
+                <td>21</td>
+                <td>UK</td>
+            </tr>
+           </tbody>
+        </table>
+    </article>
+
 </body>
 </html>
