Fix index.html location and update portfolio

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,10 +6,10 @@
     <title>Hameedah Idowu-Personal Portfolio</title>
 </head>
 <body>
-    <head>
+    <header>
         <h1>Hameedah Idowu</h1>
         <p>Aspiring Web Developer | Passionate about coding</p>
-    </head>
+    </header>
     <nav>
         <ul>
             <li><a href="#introduction">Introduction</a></li>
