--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,25 +6,34 @@
     <title>My First Portfolio</title>
 </head>
 <body>
-    <h1>Welcome to My First Portfolio Page</h1> 
-    <p>This is my first webpage created as part of the ALX Front-end program. It helps me practice the basics in html.</p>
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
 
-    <h2>About me</h2>
-    <p> I'm learning how to structure a webpage using headind, paragraphs, images, and links. Html makes it easy to organise information.</p>
+    <main>
+        <article>
+            <h1>Welcome to My First Portfolio Page</h1> 
+            <p>This is my first webpage created as part of the ALX Front-end program. It helps me practice the basics in html.</p>
 
-    <h3>My learning Journey</h3>
-    <p>Everyday, I understand how websites work and how tags help in building webpage layout.</p>
+            <h2>About me</h2>
+            <p> I'm learning how to structure a webpage using headind, paragraphs, images, and links. Html makes it easy to organise information.</p>
 
-    <p>I am excited to continue learning and to build more complex webpage in the future!</p>
+            <h3>My learning Journey</h3>
+            <p>Everyday, I understand how websites work and how tags help in building webpage layout.</p>
 
-    <a href="https://www.alxafrica.com" target="_blank">
-        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo">
-    </a>
-    <p>To see my tweets click the link below</p>
-    <a href="tweets.html">See my tweets</a>
+            <p>I am excited to continue learning and to build more complex webpage in the future!</p>
 
-    <article>
-        <table border="1">
+            <a href="https://www.alxafrica.com" target="_blank">
+                <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo">
+           </a>
+            <p>To see my tweets click the link below</p>
+           <a href="tweets.html">See my tweets</a>
+
+
+         <table border="1">
            <thead>
             <tr>
                 <th>Name</th>
@@ -54,8 +63,18 @@
                 <td>UK</td>
             </tr>
            </tbody>
-        </table>
-    </article>
+         </table>
+      </article>
+
+
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+   </main>
+
+   <footer>
+        <p>Made by Hameedah Idowu - <a href="https://www.alxafrica.com" target="_blank">here</a>.</p>
+   </footer>
 
 </body>
 </html>
