--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -6,27 +6,46 @@
     <title>My Tweets</title>
 </head>
 <body>
-    <h1>My Embedded Tweets</h1>
+    
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
 
-    <blockquote class="twitter-tweet">
-        <p lang="en" dir="ltr">
-            Ready to be your own boss?<br><br>
-            Apply to ALX Ventures Freelancer Academy today!<br><br>
-            Learn how to identify, monetise, and manage your freelance skills.<br><br>
-            Don’t miss your chance. Apply now!<br><br>🔗 
-            <a href="https://t.co/DsCODpBcI5">https://t.co/DsCODpBcI5</a>.
-            <a href="https://twitter.com/hashtag/FreelancerAcademy?src=hash&amp;ref_src=twsrc%5Etfw">#FreelancerAcademy</a> 
-            <a href="https://twitter.com/hashtag/FreelancingLife?src=hash&amp;ref_src=twsrc%5Etfw">#FreelancingLife</a> 
-            <a href="https://twitter.com/hashtag/DigitalNomads?src=hash&amp;ref_src=twsrc%5Etfw">#DigitalNomads</a> 
-            <a href="https://t.co/qOtS8Z47Jm">pic.twitter.com/qOtS8Z47Jm</a>
-        </p>
-        &mdash; ALX Ventures (@alxventures) 
-            <a href="https://twitter.com/alxventures/status/1980699654430843332?ref_src=twsrc%5Etfw">
-                October 21, 2025
-            </a>
-        </blockquote>
-         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <main>
+         <article>
+              <h1>My Embedded Tweets</h1>
 
-         <a href="index.html">Go back to Homepage</a>
+              <blockquote class="twitter-tweet">
+                    <p lang="en" dir="ltr">
+                         Ready to be your own boss?<br><br>
+                         Apply to ALX Ventures Freelancer Academy today!<br><br>
+                         Learn how to identify, monetise, and manage your freelance skills.<br><br>
+                         Don’t miss your chance. Apply now!<br><br>🔗 
+                       <a href="https://t.co/DsCODpBcI5">https://t.co/DsCODpBcI5</a>.
+                       <a href="https://twitter.com/hashtag/FreelancerAcademy?src=hash&amp;ref_src=twsrc%5Etfw">#FreelancerAcademy</a> 
+                     <a href="https://twitter.com/hashtag/FreelancingLife?src=hash&amp;ref_src=twsrc%5Etfw">#FreelancingLife</a> 
+                     <a href="https://twitter.com/hashtag/DigitalNomads?src=hash&amp;ref_src=twsrc%5Etfw">#DigitalNomads</a> 
+                     <a href="https://t.co/qOtS8Z47Jm">pic.twitter.com/qOtS8Z47Jm</a>
+                  </p>
+                  &mdash; ALX Ventures (@alxventures) 
+                  <a href="https://twitter.com/alxventures/status/1980699654430843332?ref_src=twsrc%5Etfw">
+                      October 21, 2025
+                    </a>
+              </blockquote>
+              <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+              <a href="index.html">Go back to Homepage</a>
+         </article>
+         <aside>
+              <p>placeholder to add comment thread later</p>
+          </aside>
+
+  </main>
+     <footer>
+          <p>Made by Hameedah Idowu - <a href="https://www.alxafrica.com" target="_blank">here</a>.</p>
+    </footer>
 </body>
 </html>
